[package]
name = "aptos-state-view"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos state view"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
aptos-crypto = { path = "../../crates/aptos-crypto" }
aptos-types = { path = "../../types" }
aptos-workspace-hack = { version = "0.1", path = "../../crates/aptos-workspace-hack" }

serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
serde_bytes = "0.11.5"
bcs = "0.1.2"
move-core-types = { git = "https://github.com/diem/move", rev = "3fe033b112eae7df2d15ab3467624165ae510caa", version = "0.0.3", features=["address32"] }


[features]
default = []
fuzzing = ["aptos-types/fuzzing"]
